# xarray-gui

./: README.rst  setup.cfg
xrgviz/: __init__.py  _version.py  core.py
xrviz/: _version.py  core.py
