[metadata]
name = xrgviz
version = 0.0.1
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Small pyqt5-gui to visualize xarray objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/xarray-gui
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    appdirs>=1.4.4
    numpy>=1.20
    xarray
    pyqt5

[options.entry_points]
console_scripts =
    xrgviz = xrgviz.core:cli
